this is my portfolio page

--- a/Portfilo.css
+++ b/Portfilo.css
@@ -114,7 +114,7 @@ ul li a{
     
 }
 .intro{
-    background-image: url('home.jpg');
+    background-image: url('./images/home.jpg');
     text-align: center;
     background-repeat: no-repeat;
     flex-direction: column;
@@ -262,7 +262,7 @@ ul li a{
 .rank div{
     border:1px solid black;
     border-radius: 15px 5px;
-    background-image: url("blog.jpg");
+    background-image: url("./images/blog.jpg");
     background-size: cover;
 }
 .lang{
@@ -278,7 +278,7 @@ ul li a{
 /* Social */
 #social{
     text-align: center;
-     background-image: url('about.jpg');
+     background-image: url('./images/about.jpg');
      
 }
 .handles{
