--- a/Portfilo.css
+++ b/Portfilo.css
@@ -79,12 +79,8 @@ ul li a{
     box-sizing: border-box;
     flex-direction: column;
     align-items: center;
-    /* padding: 5px; */
     justify-content: space-between;
-    /* text-align: center; */
     width: 100%;
-    /* float: left; */
-    /* opacity: 0.9; */
     }
     .navd  ul li{
         /* width: 50%; */
@@ -103,9 +99,7 @@ ul li a{
     /* margin: 6px 6px; */
 }
 .navd a:hover{
-    /* background-color: #47c194; */
     color: white;
-    /* border-radius: 6px; */
 }
 
 /* home page */
@@ -173,11 +167,11 @@ ul li a{
 /* //About page */
 #aboutpage{ 
     background: linear-gradient(-45deg,#ee7752,#e73c7e,#23a6d5,#23d5ab);
-    background-size: cover;
-    padding: 0px;
     width: 100%;
+    height: 100%;
+    background-size: 400% 400%;
     box-sizing: border-box;
-    animation: gradient 5s ease infinite;
+    animation: gradient 15s ease infinite;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 @keyframes gradient{
@@ -193,7 +187,7 @@ ul li a{
 }
 #animation{
     text-align: center;
-    padding-top: 12rem;
+    padding-top: 11rem;
 
 }
 #animation img{
@@ -219,9 +213,9 @@ ul li a{
     background: linear-gradient(-45deg,#ff9482,#7d77ff);
     font-size: larger;
     /* border: 2px solid red; */
+    cursor: pointer;
     width: 47%;
     
-    cursor: pointer;
 }
 
 .bar:hover{
@@ -241,9 +235,8 @@ ul li a{
     display: flex;
     justify-content: center;
     /* border: 2px solid black; */
-    height: 100vh;
+    height: 100%;
     flex-wrap: wrap;
-    cursor: pointer;
 }
 .rank div:hover{
     box-shadow: black 5px 5px 15px;
@@ -262,6 +255,7 @@ ul li a{
 .rank div{
     border:1px solid black;
     border-radius: 15px 5px;
+    cursor: pointer;
     background-image: url("./images/blog.jpg");
     background-size: cover;
 }
@@ -278,7 +272,10 @@ ul li a{
 /* Social */
 #social{
     text-align: center;
-     background-image: url('./images/about.jpg');
+     /* background-image: url('./images/homebg.jpg'); */
+     background: linear-gradient(45deg,black,rgb(77, 75, 75));
+
+     /* background-size: cover; */
      
 }
 .handles{
