Added projects field change 3

--- a/Portfilo.css
+++ b/Portfilo.css
@@ -345,6 +345,9 @@ width: 100%;
     .navd ul{
         gap: 0;
     }
+    #animation a{
+        display: none;
+    }
     .project{
         /* flex-direction: row; */
         width: 70%;
